--- a/style/ss.css
+++ b/style/ss.css
@@ -1,5 +1,18 @@
 body {
-    
+    background-image: url('../img/background.png');
+}
+
+
+.background-gradient {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    z-index: -2;
+
+    background: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.15) 33%, rgba(255, 255, 255, 0.15) 66%, rgba(255, 255, 255, 0) 100%);
 }
 
 .slideshow {
@@ -8,7 +21,7 @@ body {
     height: calc(100vh);
     position: relative;
     overflow: hidden;
-    
+
     padding: 15px;
     text-align: center;
 }
@@ -20,16 +33,16 @@ body {
 
 .title {
     color: white;
-    background-color: rgba(0,0,0,0.75);
+    background-color: rgba(0, 0, 0, 0.75);
     padding: 10px;
-    
+
     transition: opacity 0.1s;
 }
 
 
 .text {
     position: absolute;
-    display:inline;
+    display: inline;
     bottom: 75px;
     left: 0px;
     /*transform: translateX(-50%);*/
@@ -37,10 +50,10 @@ body {
     overflow-y: auto;
 
     padding: 20px;
-    
+
     color: white;
-    background-color: rgba(0,0,0,0.75);
-    
+    background-color: rgba(0, 0, 0, 0.75);
+
     transition: opacity 0.5s;
 }
 
@@ -49,7 +62,7 @@ body {
     bottom: 15px;
     left: 50%;
     transform: translateX(-50%);
-    
+
     width: 100px;
     height: 50px;
     color: #4c4c4c;
@@ -63,12 +76,11 @@ body {
     position: absolute;
     top: 0px;
     z-index: -1;
-    background-color: lightgrey;
     background-image: url('../img/1.jpg');
-    
+
     background-position: center;
-    /*background-size: cover;*/
-    
+    background-size: cover;
+
     background-repeat: no-repeat;
     overflow: hidden;
     top: 0px;
@@ -76,7 +88,7 @@ body {
     left: 0px;
     right: 0px;
     text-align: center;
-    
+
 }
 
 
