--- a/style/ss.css
+++ b/style/ss.css
@@ -1,5 +1,14 @@
 body {
     background-image: url('../img/background.png');
+    overflow: hidden;
+}
+
+h1 {
+    font-family: 'Bebas Neue', cursive;
+}
+
+p {
+    font-family: 'Lato', sans-serif;
 }
 
 
@@ -36,7 +45,7 @@ body {
     background-color: rgba(0, 0, 0, 0.75);
     padding: 10px;
 
-    transition: opacity 0.1s;
+    transition: opacity 0.5s;
 }
 
 
@@ -57,7 +66,7 @@ body {
     transition: opacity 0.5s;
 }
 
-#btnNext {
+.btnNext {
     position: absolute;
     bottom: 15px;
     left: 50%;
@@ -66,9 +75,11 @@ body {
     width: 100px;
     height: 50px;
     color: #4c4c4c;
-    background-color: #cecece;
+    background-color: rgba(0,0,0,0.75);
     border-radius: 10px;
     cursor: pointer;
+    
+    transition: transform 1s;
 }
 
 
@@ -112,5 +123,48 @@ body {
 
 .textHide {
     opacity: 0;
-    transition: 0.1s;
+    transition: opacity 0.75s;
+}
+
+
+/*********************************
+*** Next Slide Arrow Animation ***
+*********************************/
+
+.arrow {
+    position: absolute;
+    left: 35px;
+    top: 3px;
+    transform: rotate(-45deg);
+    border-left: 7px solid white;
+    border-bottom: 7px solid white;
+    height: 30px;
+    width: 30px;
+    margin: auto;
+    
+    animation: anim 3s linear 0s infinite;
+}
+
+@keyframes anim {
+    0% {
+        border-color: rgba(255,255,255,1);
+    }
+    
+    80% {
+        border-color: rgba(255,255,255,1);
+        transform: translateY(0px) rotate(-45deg);
+    }
+    90% {
+        border-color: rgba(255,255,255,0.5);
+        transform: translateY(5px) rotate(-45deg);
+    }
+    100% {
+        border-color: rgba(255,255,255,1);
+        transform: translateY(0px) rotate(-45deg);
+    }
+}
+
+.arrowHide {
+    transform: translateX(-50%) translateY(75px) rotateX(-180deg);
+    transition: transform 0.5s;
 }
